01-ollama-ai-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama-ai
  labels:
    name: ollama-ai
    purpose: ai-models
