02-ollama-ai-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ollama-ai
  labels:
    app: ollama-orca-mini
    service-type: api
spec:
  type: ClusterIP
  ports:
  - port: 11434
    targetPort: 11434
    protocol: TCP
    name: http
  selector:
    app: ollama-orca-mini
