03-ollama-ai-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ollama-ai
  labels:
    app: ollama-orca-mini
spec:
  type: ClusterIP
  ports:
  - port: 11434
    targetPort: 11434
    protocol: TCP
    name: http
  selector:
    app: ollama-orca-mini
root@izanami:~/ollama-ai# cat 03-ollama-ai-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama-ai
spec:
  ingressClassName: public  # Usa il tuo Ingress Controller
  rules:
  - host: ollama-ai.192.168.1.14.nip.io  # Cambia con il tuo dominio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama-service
            port:
              number: 11434
